--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>CARINA CANTIK</h1>
+    <h1> CANTIK</h1>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis harum consectetur at officia corrupti repudiandae, ad vero quae nesciunt ipsa labore architecto in fugiat? Perferendis vel expedita officiis sed sunt?
 </body>
 </html>
