Pecah-x1000-Trik-Jitu-Ala-Gen-Z-Main-di-Sweet-Bonanza-Cuan-80-Juta.html

--- a/Pecah-x1000-Trik-Jitu-Ala-Gen-Z-Main-di-Sweet-Bonanza-Cuan-80-Juta.html
+++ b/Pecah-x1000-Trik-Jitu-Ala-Gen-Z-Main-di-Sweet-Bonanza-Cuan-80-Juta.html
@@ -77,7 +77,7 @@
                  "url": "https://visabbca.sirv.com/wg4d/logowebwg.png"
                }
              },
-             "description": "7 profesi paling beruntung di Mahjong Wins 3 akhirnya terungkap! Cari tahu apakah profesi Anda termasuk."
+             "description": "Simak trik jitu bermain Sweet Bonanza ala Gen Z yang bikin cuan 80 juta dalam semalam."
             }
         </script>
 </head>
